--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2"
   },
@@ -34,6 +35,7 @@
     "@types/express": "^4.17.11",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^15.3.0",
     "@types/sequelize": "^4.28.9",
     "typescript": "^4.2.4"
