--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.3.0",
     "@types/sequelize": "^4.28.9",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint": "^7.29.0",
     "typescript": "^4.2.4"
   }
 }
