--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The server of the school quiz web application.",
   "main": "src/index.js",
   "scripts": {
-    "start": "concurrently -k -n 'Typescript,Node' -p '[{name}]' -c 'blue,green' 'tsc --watch' 'nodemon dist/index.js'"
+    "start": "node dist/index.js",
+    "dev": "nodemon --config nodemon.json src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -45,6 +46,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.1",
+    "ts-node": "^10.0.0",
     "typescript": "^4.2.4"
   }
 }
