--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mariadb": "^2.5.4",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "socket.io": "^4.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
