--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "concurrently": "^6.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "ioredis": "^4.27.9",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.5.4",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
+    "redis": "^3.1.2",
     "sequelize": "^6.6.2",
     "socket.io": "^4.2.0"
   },
@@ -36,10 +38,12 @@
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.11",
+    "@types/ioredis": "^4.27.1",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.3.0",
+    "@types/redis": "^2.8.31",
     "@types/sequelize": "^4.28.9",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
