--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node dist/index.js",
+    "build": "tsc",
     "dev": "nodemon --config nodemon.json src/index.ts",
     "db:sync": "node dist/syncDatabase.js",
-    "db:seed": "node dist/seedDatabase.js"
+    "db:seed": "node dist/seedDatabase.js",
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
