--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "mysql2": "^2.2.5",
     "redis": "^3.1.2",
     "sequelize": "^6.6.2",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
